--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@ layout: default
 ---
 
 <div class="container flex-grow-1">
-  <h1 class="my-4">UTM Virtual Machine Gallery</h1>
+  <h1 class="my-4 text-center">UTM Virtual Machine Gallery</h1>
   <div class="row">
     {% for vm in site.vms %}
       <div class="col-lg-4 col-md-6 mb-4">
         <div class="card h-100">
-          <div class="card-body">
+          <div class="card-body text-center">
             <h4 class="card-title">{{ vm.name }}</h4>
-            <!-- <p class="card-text">{{ vm.description_html | markdownify }}</p> -->
-            <p class="card-text">Downloads: {{ vm.downloads }}</p>
+            <p class="card-text">
+              <img src="/assets/icons/download.svg" alt="Download Icon" class="icon"> Downloads: {{ vm.downloads }}
+            </p>
+            <img src="{{ vm.icon_url }}" alt="{{ vm.name }}" class="img-fluid mb-3">
           </div>
-          <div class="card-footer">
+          <div class="card-footer text-center">
             <a href="{{ vm.url }}" class="btn btn-primary">View Details</a>
           </div>
         </div>
