--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@ layout: default
           <div class="card-body text-center">
             <h4 class="card-title">{{ vm.name }}</h4>
             <p class="card-text">
-              <img src="/assets/icons/download.svg" alt="Download Icon" class="icon"> Downloads: {{ vm.downloads }}
+              <img src="assets/icons/download.svg" alt="Download Icon" class="icon"> Downloads: {{ vm.downloads }}
             </p>
             <img src="{{ vm.icon_url }}" alt="{{ vm.name }}" class="img-fluid mb-3">
           </div>
           <div class="card-footer text-center">
-            <a href="{{ vm.url }}" class="btn btn-primary">View Details</a>
+            <a href="{{ vm.url | relative_url }}" class="btn btn-primary">View Details</a>
           </div>
         </div>
       </div>
