add how to use add card to request VM

--- a/index.html
+++ b/index.html
@@ -21,5 +21,21 @@ layout: default
         </div>
       </div>
     {% endfor %}
+    <!-- Default card to request VM -->
+    <div class="col-lg-4 col-md-6 mb-4">
+      <div class="card h-100">
+        <div class="card-body text-center">
+          <h4 class="card-title">VM not found</h4>
+          <p class="card-text">
+            Did not find the VM you were looking for? <br>
+          </p>
+          <img src="" class="img-fluid mb-3">
+        </div>
+        <div class="card-footer text-center">
+          <a href="https://github.com/naveenrajm7/utm-box/issues/new?title=Request%20New%20VM&body=Please%20provide%20details%20for%20the%20new%20VM%20you%20would%20like%20to%20request." class="btn btn-primary">Request or Contribute</a>
+        </div>
+      </div>
+    </div>
+    <!-- End of default card -->
   </div>
 </div>
