redirect to issue with template

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ layout: default
           </p>
           <img src="" class="img-fluid mb-3">
         </div>
-        <div class="card-footer text-center">
-          <a href="https://github.com/naveenrajm7/utm-box/issues/new?title=Request%20New%20VM&body=Please%20provide%20details%20for%20the%20new%20VM%20you%20would%20like%20to%20request." class="btn btn-primary">Request or Contribute</a>
+        <div class="card-footer text-center">     <a href="https://github.com/naveenrajm7/utm-box/issues/new?template=box-request.md" class="btn btn-primary">Request or Contribute</a>
+     
         </div>
       </div>
     </div>
